fix menu z-index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15317,7 +15317,7 @@ ul.dashed > li:before {
 */
 @media (max-width: 992px) {
   .custom-navbar {
-    z-index: 999;
+    z-index: 2001;
     padding: 3rem 1rem;
     position: relative !important;
   }
@@ -15332,7 +15332,7 @@ ul.dashed > li:before {
 
 @media (max-width: 767.98px) {
   .custom-navbar {
-    z-index: 999;
+    z-index: 2001;
     padding: 1rem 1rem;
     background: none;
     border: none;
@@ -15342,7 +15342,7 @@ ul.dashed > li:before {
 }
 
 .custom-navbar {
-  z-index: 999;
+  z-index: 2001;
   padding: 3rem 1rem;
 }
 
